--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
     <main id="main">
     </main>
     <!-- Don't forget to include React dependencies! -->
-    <script src="index.js"></script>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <div id="mocha"></div>
+    <script src="node_modules/react/dist/react.js"></script>
+    <script src="node_modules/react-dom/dist/react-dom.js"></script>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="test/index-test.js"></script>
+
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
